<resources>
    <string name="app_name">foodfind</string>

    <!--회원가입-->
    <string name="phone_number">전화번호</string>
    <string name="userEmailBtn">중복확인</string>
    <string name="userPassword">비밀번호</string>
    <string name="userPasswordCheck">비밀번호 확인</string>
    <string name="userName">이름(닉네임)</string>
    <string name="email">이메일</string>
    <string name="gender">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="thirdGender">비공개</string>
    <string name="userDateOfBirth">생년월일(ex 20001216)</string>

    <string name="userId2">아이디를 입력해주세요.</string>
    <string name="userPassword2">비밀번호</string>
    <string name="userPasswordCheck2">비밀번호 확인</string>
    <string name="userName2">닉네임을 입력하세요.</string>
    <string name="userEmail">이메일을 입력해주세요.</string>
    <string name="userDateOfBirth2">Ex)20001212</string>

    <string name="allAgree">모두 동의합니다.</string>
    <string name="termsAndConditionsAgree">서비스 이용약관 동의</string>
    <string name="personalInformationAgree">개인정보 수집 및 이용 동의</string>
    <string name="locationInformationAgree">위치정보 서비스 이용약관 동의</string>
    <string name="marketingAgree">만 14세 미만의 사용자가 아닙니다</string>

    <string name="main_list">List</string>
    <string name="main_auto_login">자동 로그인</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="registerBtn">회원가입</string>
    <string name="Loading">Loading</string>
    <string name="login_explain">회원가입 후 로그인 방법</string>
    <string name="login_explain2">이메일(아이디) 칸에 입력했던 이메일로 확인 url이 발송됩니다. 링크로 접속하여 사용자 확인이 완료되기 전까지는 로그인이 되지 않습니다. 로그인을 하기 전 이메일을 확인해주시길 바랍니다. 확인하셨다면 다음버튼을 눌러주십시오.</string>
    <string name="login_next">확인했습니다</string>

    <!-- home 화면 -->
    <string name="home_find_store">주변가게 찾기</string>
    <string name="home_manage_store">내 가게 관리</string>
    <string name="home_manage_order">내 주문 관리</string>
    <string name="home_welcome">환영합니다.</string>
    <string name="home_user">님</string>
    <string name="setting">유저 정보</string>
    <string name="logout">로그아웃</string>
    <string name="delete_user">회원탈퇴</string>
    <string name="about">문의하기</string>
    <string name="terms_conditions">이용약관</string>
    <string name="developers">개발자정보</string>
    <string name="notification">알림</string>

    <!-- truck page -->
    <string name="text_map_search">현재 가게 위치 정보</string>
    <string name="map_search">위치 조회</string>
    <string name="truck_title">가게 이름을 입력해주세요.</string>
    <string name="truck_content">가게 정보를 입력해주세요</string>
    <string name="truck_current_status">운영 상태</string>
    <string name="truck_open">영업중</string>
    <string name="truck_close">휴업중</string>
    <string name="truck_manage">가게 정보 관리</string>
    <string name= "new_food_item_name">새로운 메뉴의 이름</string>
    <string name= "new_food_item_description">새로운 메뉴의 설명</string>
    <string name= "new_food_item_price">새로운 메뉴의 가격</string>
    <string name= "tv_food_item_name">이름</string>
    <string name= "tv_food_item_description">설명</string>
    <string name= "tv_food_item_price">가격</string>
    <string name= "new_food_item_bottom_sheet">아래에 추가할 메뉴의 정보를 입력하세요</string>
    <string name="new_food_item_bottom_sheet_btn">리스트에 추가하기</string>
    <string name="update_food_item_bottom_sheet">아래에 메뉴 내용을 수정해 주세요</string>
    <string name= "update_food_item_name">수정될 메뉴의 이름</string>
    <string name= "update_food_item_description">수정될 메뉴의 설명</string>
    <string name= "update_food_item_price">수정될 메뉴의 가격</string>
    <string name="update_food_item_bottom_sheet_btn">수정하기</string>
    <string name="tv_food_item_bottom_sheet_status">품절 여부</string>
    <string name="update_food_item_status_available">판매 가능</string>
    <string name="update_food_item_status_notavailable">품절</string>


    <!-- truck item page -->
    <string name="read_title">이름</string>
    <string name="read_content">소개</string>
    <string name="read_appointment_place">가게 위치</string>
    <string name="read_truck_item">판매하는 것</string>
    <string name="read_report">신고하기</string>
    <string name="read_participate">참가하기</string>
    <string name="read_cancel">취소하기</string>
    <string name="read_delete">삭제하기</string>
    <string name="read_truck_comment">리뷰</string>
    <string name="update_comment">수정할 내용을 입력해주세요</string>
    <string name="update_comment_content">수정할 내용</string>
    <string name="update_comment_rating">별점</string>

    <!-- 주문 세부 화면 -->
    <string name="textViewDescriptionInfo">요청 사항</string>
    <string name="orderStart">조리 시작</string>
    <string name="orderCancel">주문 취소</string>
    <string name="orderCall">전화 걸기</string>
    <string name="orderComment">댓글 적기</string>
    <string name="textViewStatusInfo">현재 주문 상태</string>
    <string name="textViewTimeInfo">완료 예정 시간</string>
    <string name="tvCompletionTime">주문 조리 완료 예상 시간을 입력하세요.</string>
    <string name="etCompletionTime">예상 시간(분)</string>
    <string name="textViewCompleteCook">입력하기</string>

    <!-- 사용자 주문 화면 -->
    <string name="button_add_cart">장바구니에 담기</string>
    <string name="recentOrderList">최근 주문들</string>
    <string name="orderList">주문서</string>
    <string name="shoppingCartList">장바구니</string>
    <string name="otherRequest">추가 요청 사항</string>
    <string name="otherListRequest">주문 목록</string>
    <string name="otherRequestTruckName">가게 이름</string>
    <string name="otherRequestHint">요청 사항을 작성해주세요.</string>

    <string name="insert_comment">댓글과 별점을 남겨주세요</string>
    <string name="insert_comment_content">댓글</string>
    <string name="insert_comment_btn">댓글 남기기</string>

</resources>