<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="20dp">
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_comment"
        android:layout_margin="30dp"/>
    <TextView
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_comment_content"/>
    <EditText
        android:id="@+id/etInsertCommentContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"/>
    <TextView
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_comment_rating"
        android:layout_marginTop="10dp"/>
    <RatingBar
        android:id="@+id/commentInsertRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/commentInsertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/insert_comment_btn"/>
  </LinearLayout>
</layout>
