<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_truck"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/main_color1"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btn_create_ok"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_check_circle_24"
                    android:layout_marginEnd="15dp"
                    app:tint="@color/white"/>

                <TextView
                    android:id="@+id/textView_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/truck_manage"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/btn_create_delete"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_delete_24"
                    android:layout_marginEnd="15dp"
                    app:tint="@color/white"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/sv_create"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_truck">

            <LinearLayout
                android:id="@+id/layout_create"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/truck_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/truck_title"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/truck_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/truck_content"
                        android:maxHeight="300dp"
                        android:minHeight="150dp"
                        android:gravity="start"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>

                <TextView
                    android:id="@+id/tv_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/text_map_search"
                    android:textColor="@color/main_color1" />

<!--                <fragment-->
<!--                    android:id="@+id/map"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="300dp"-->
<!--                    android:name="com.naver.maps.map.MapFragment">-->
<!--                </fragment>-->

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/main_color6"
                    android:text="@string/map_search"
                    android:textColor="@color/main_color1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_color1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/truck_current_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/truck_current_status"
                            android:textColor="@color/main_color1" />

                        <RadioGroup
                            android:id="@+id/radioGroup_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/truck_open"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/truck_open" />

                            <RadioButton
                                android:id="@+id/truck_close"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="true"
                                android:text="@string/truck_close" />
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_age_from_to"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_age_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="write_minAge"
                        android:textColor="@color/main_color1" />

                    <TextView
                        android:id="@+id/tv_age_from_frame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="write_ageFrom"
                        android:textColor="@color/main_color1" />

                    <TextView
                        android:id="@+id/tv_age_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="write_maxAge"
                        android:textColor="@color/main_color1" />

                    <TextView
                        android:id="@+id/tv_age_to_frame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="write_ageTo"
                        android:textColor="@color/main_color1" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>